[package]
name = "solana-forking-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
serde = {version = "1.0.228", features = ["derive"]}
serde_json  = "1.0.145"
tokio = {version = "1.48.0", features = ["full"]}
litesvm = "0.8.1"
solana-sdk = "3.0.0"
solana-system-interface = "2.0.0"
uuid = {version = "1.18.1", features = ["v4"]}
bs58 = "0.5.1"
bincode = "1.3"
dotenv = "0.15.0"
solana-client = "3.0.8"
chrono = "0.4.42"
spl-token-2022 = "9.0.0"
spl-associated-token-account = "8.0.0"
